force-app/main/default/objects/public_External_Lead__x/public_External_Lead__x.object-meta.xml
<CustomObject>
    <description>public$External_Lead</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$External_Lead</externalName>
    <label>External Lead</label>
    <pluralLabel>External Leads</pluralLabel>
</CustomObject>