force-app/main/default/objects/public_External_Lead__x/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <description>company</description>
    <externalDeveloperName>company</externalDeveloperName>
    <label>Company</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>