force-app/main/default/objects/public_External_Lead__x/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>email</description>
    <externalDeveloperName>email</externalDeveloperName>
    <label>Email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>