force-app/main/default/objects/public_External_Lead__x/fields/first__c.field-meta.xml
<CustomField>
    <fullName>first__c</fullName>
    <description>first</description>
    <externalDeveloperName>first</externalDeveloperName>
    <label>First Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>