force-app/main/default/objects/public_External_Lead__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>