force-app/main/default/objects/public_External_Lead__x/fields/job_id__c.field-meta.xml
<CustomField>
    <fullName>job_id__c</fullName>
    <description>job_id</description>
    <externalDeveloperName>job_id</externalDeveloperName>
    <label>Job ID</label>
    <length>255</length>
    <referenceTargetField>Job__c.JobID__c</referenceTargetField>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>External Lead</relationshipLabel>
    <relationshipName>External_Lead</relationshipName>
    <type>IndirectLookup</type>
</CustomField>