force-app/main/default/objects/public_External_Lead__x/fields/last__c.field-meta.xml
<CustomField>
    <fullName>last__c</fullName>
    <description>last</description>
    <externalDeveloperName>last</externalDeveloperName>
    <label>Last Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>