force-app/main/default/objects/public_External_Lead__x/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>phone</description>
    <externalDeveloperName>phone</externalDeveloperName>
    <label>Phone</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>