force-app/main/default/objects/public_External_Lead__x/fields/score__c.field-meta.xml
<CustomField>
    <fullName>score__c</fullName>
    <description>score</description>
    <externalDeveloperName>score</externalDeveloperName>
    <label>Lead Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>