force-app/main/default/objects/public_External_Lead__x/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <description>source</description>
    <externalDeveloperName>source</externalDeveloperName>
    <label>Source</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>