force-app/main/default/objects/public_External_Lead__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>first__c</columns>
    <columns>last__c</columns>
    <columns>job_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>